--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               src="./images/home-images/home-popular-3.jpeg"
               alt="An image of Newcastle"
             />
-            <p>NewCastle</p>
+            <p>Newcastle</p>
           </article>
           <article class="flex-center flex-column hover">
             <img
