--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -31,6 +31,36 @@
         </div>
       </nav>
     </header>
+      <main>
+        <h1>The city of Newcastle is situated in the north east of England and is o</h1>
+        <h2>Our Newcastle is a great city, one that never stands still. A city that makes history and shapes the future.</h2>
+        <section class="places">
+          <div>
+            <h5>The City of Newcastle</h5>
+            <img src="../images/Newcastle Images/newcastle_city_centre_featured_image.jpg"/>
+          </div>
+          <div>
+            <h5>Newcastle Cathedral</h5>
+            <img src="../images/Newcastle Images/newcastle-cathedral.jpg"/>
+          </div>
+          <div>
+            <h5>The Angel of the North</h5>
+            <img src="../images/Newcastle Images/Angel-square.jpg">
+          </div>
+          <div>
+            <h5>St James Park</h5>
+            <img src="../images/Newcastle Images/St James park.jpg">
+          </div>
+        </section>
+
+
+
+
+      </main>
+
+
+
+
 
     <footer></footer>
   </body>
