--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               alt="An image of Newcastle"
             />
             <p>NewCastle</p>
-          </article>
+          </article></a>
           <article class="flex-center flex-column hover">
             <img
               src="./images/home-images/home-popular-4.jpg"
