imagine of me added to footer

--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="1616"
+      sizes="16x16"
       href="../images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
@@ -85,10 +85,10 @@
       </section>
     </main>
     <footer class="flex-center flex-column">
+      <img src="../images/Newcastle Images/linkedin.jpeg" class="image">
       <h3>Thank you for visiting my page and hope you enjoy it, I have been trying to learn front end development
         for around 5 months now while tackling work and my foundation degree in computer science
       </h3>
-      <img src="">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
       <div class="flex-center">
         <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
