Links to other pages

--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
       <header>
         <nav>
           <div class="logo-container">
-            <!-- <img
-              src="./images/logo.png"
-              alt="logo of travelStorm agency"
-            /> -->
             <a class="logo-anchor" href="index.html"><p>TravelStorm</p></a>
           </div>
           <div class="anchor-container flex-center">
-            <a href="index.html" class="hover">Home</a>
+            <a href="./index.html" class="hover">Home</a>
             <a href="./pages/brussels.html" class="hover">Brussels</a>
             <a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
             <a href="./pages/newcastle.html" class="hover">Newcastle</a>
