--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is the page for Newcastle" />
-    <meta name="author" content="David Eglintine" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SYF1SHHgwCrg5ti3gP5Q8ZXwe7XaFQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/newcastle.css" />
-    <!-- favicon section -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
+      rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="../styles/newcastle.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/favicon_io/favicon-16x16.png"
-    />
-    <!-- end -->
-    <title>Newcastle Upon Tyne</title>
+      href="./images/favicon_io/favicon-16x16.png"/>
+    <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
+    <title>Newcastle</title>
   </head>
   <body>
     <header>
       <nav>
-        <div class="anchor-container flex centre">
-          <a href="../index.html">Home</a>
-          <a href="./brussels.html">Brussels</a>
-          <a href="./kathmandu.html">Kathmandu</a>
-          <a href="./newcastle.html">Newcastle</a>
-          <a href="./telaviv.html">Tel-Aviv</a>
+        <div class="logo-container">
+          <a class="logo-anchor" href="index.html"><p>TravelStorm</p></a>
+        </div>
+        <div class="anchor-container flex-center">
+          <a href="../index.html" class="hover">Home</a>
+          <a href="../pages/brussels.html" class="hover">Brussels</a>
+          <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
+          <a href="../pages/newcastle.html" class="hover">Newcastle</a>
+          <a href="../pages/telaviv.html" class="hover">Tel-Aviv</a>
         </div>
       </nav>
     </header>
