fixed semantics for kathamndu page (footer/header not done)

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -21,14 +21,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- favicon section -->
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="../images/favicon_io/favicon-16x16.png"
     />
-    <!-- end -->
     <title>Travel-Storm:Kathmandu</title>
   </head>
   <body>
@@ -57,9 +55,8 @@
         <a href="#slideshow">Learn more</a>
       </section>
       <section class="slideshow" id="slideshow">
-        <div class="slide-wrapper">
           <div class="slider">
-            <div class="slide">
+            <figure class="slide">
               <img
                 src="../images/kathmandu/kathmandu_swayambhunath_temple.jpg"
                 alt="Swayambhunath Temple: Majestic stupa surrounded by prayer flags, an iconic symbol of spiritual serenity in Kathmandu."
@@ -73,8 +70,8 @@
                 Kathmandu.
               </p>
               <a href="#swayambhunath">View details</a>
-            </div>
-            <div class="slide">
+            </figure>
+            <figure class="slide">
               <img
                 src="../images/kathmandu/kathmandu_bhaktapur_durbar_square.jpg"
                 alt="Bhaktapur Durbar Square: Timeless architecture and vibrant heritage captured in the heart of Bhaktapur, Nepal."
@@ -86,8 +83,8 @@
                 through a living museum of Nepal's glorious past.
               </p>
               <a href="#bhaktapur-durbar-square">View details</a>
-            </div>
-            <div class="slide">
+            </figure>
+            <figure class="slide">
               <img
                 src="../images/kathmandu/kathmandu_narayanhiti_palace_museum.jpg"
                 alt="Narayanhiti Palace Museum: Regal elegance preserved, offering a glimpse into Nepal's royal history and opulent past."
@@ -100,8 +97,8 @@
                 nation's past, elegantly preserved within these historic walls.
               </p>
               <a href="#narayanhiti-palace-museum">View details</a>
-            </div>
-            <div class="slide">
+            </figure>
+            <figure class="slide">
               <img
                 src="../images/kathmandu/kathmandu_pashupatinath_temple.jpg"
                 alt="Pashupatinath Temple: Sacred beauty along the Bagmati River, an iconic UNESCO site blending spirituality and ancient rituals."
@@ -114,8 +111,8 @@
                 site.
               </p>
               <a href="#pashupatinath-temple">View details</a>
-            </div>
-            <div class="slide">
+            </figure>
+            <figure class="slide">
               <img
                 src="../images/kathmandu/kathmandu_kopan_monastery.jpg"
                 alt="Kopan Monastery nestled in the hills, a tranquil retreat for spiritual seekers and meditation enthusiasts"
@@ -128,52 +125,53 @@
                 Valley.
               </p>
               <a href="#kopan-monastry">View details</a>
-            </div>
+            </figure>
           </div>
-        </div>
       </section>
       <section class="details-section" id="swayambhunath">
         <h2>Swayambhunath Temple</h2>
         <div class="details-container">
-          <img
-              src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg"
-              alt="swayambunath temple the majestic stupa"
-              loading="lazy"
-          />
-          <div class="details-text-container">
+          <picture>
+            <img
+            src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg"
+            alt="swayambunath temple the majestic stupa"
+            loading="lazy"
+            />
+          </picture>
+          <aside class="details-text-container">
             <p>
               Swayambhunath is a glorious ancient religious architecture,
               located in the middle of Kathmandu city. It is center of faith of
               both Buddhist and Hindus.
             </p>
-            <div>
+            <legend>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
               <span>Duration:</span>
               <span>3 - 4 hours</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-solid fa-location-dot fa-2xl"></i>
               <span>Location:</span>
               <span>Swoyambhu, Kathmandu, Nepal</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
               <span>Entrance Fee:</span>
               <span>NPR 200</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-clock fa-2xl"></i>
               <span>Opening Hours:</span>
               <span>24 hours</span>
-            </div>
+            </legend>
             <button>Book a Tour</button>
-          </div>
+          </aside>
         </div>
       </section>
       <section class="details-section" id="bhaktapur-durbar-square">
         <h2>Bhaktapur Durbar Square</h2>
         <div class="details-container">
-          <div class="details-text-container">
+          <aside class="details-text-container">
             <p>
               The ancient city Bhaktapur lies on the Eastern part of Kathmandu
               valley which is also known as Bhadgaon or Khwopa. The historical
@@ -183,162 +181,170 @@
               culture,tradition,religion from right way.we are here to support
               you for your tours.
             </p>
-            <div>
+            <legend>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
               <span>Duration:</span>
               <span>5 - 6 hours</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-solid fa-location-dot fa-2xl"></i>
               <span>Location:</span>
               <span>Durbar Square, Bhaktapur, Nepal</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
               <span>Entrance Fee:</span>
               <span>NPR 1000</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-clock fa-2xl"></i>
               <span>Opening Hours:</span>
               <span>9 am - 6 pm</span>
-            </div>
+            </legend>
             <button>Book a Tour</button>
-          </div>
-          <img
-              src="../images/kathmandu/kathmandu_bhaktapur_durbar_square_details.jpg"
-              alt="bhaktapur durbar square the palace of kings"
-              loading="lazy"
+          </aside>
+          <picture>
+            <img
+            src="../images/kathmandu/kathmandu_bhaktapur_durbar_square_details.jpg"
+            alt="bhaktapur durbar square the palace of kings"
+            loading="lazy"
             />
+          </picture>
         </div>
       </section>
       <section class="details-section" id="narayanhiti-palace-museum">
         <h2>Narayanhiti Palace Museum</h2>
         <div class="details-container">
-          <img
-              src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg"
-              alt="narayanhiti royal palace museum the royal history of nepal"
-              loading="lazy"
-          />
-          <div class="details-text-container">
+          <picture>
+            <img
+            src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg"
+            alt="narayanhiti royal palace museum the royal history of nepal"
+            loading="lazy"
+            />
+          </picture>
+          <aside class="details-text-container">
             <p>
               Narayanhiti Royal Palace Museum in Kathmandu unveils Nepal's regal
               history through ornate halls and curated exhibits of royal
               artifacts. Explore opulent living quarters, ceremonial spaces, and
               a collection of historical treasures, offering a glimpse into the country's royal heritage.
             </p>
-            <div>
+            <legend>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
               <span>Duration:</span>
               <span>3 hours</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-solid fa-location-dot fa-2xl"></i>
               <span>Location:</span>
               <span>Narayanhiti Path, Kathmandu, Nepal</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
               <span>Entrance Fee:</span>
               <span>NPR 1000</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-clock fa-2xl"></i>
               <span>Opening Hours:</span>
               <span>10:30 am - 3:30 pm</span>
-            </div>
+            </legend>
             <button>Book a Tour</button>
-          </div>
+          </aside>
         </div>
       </section>
       <section class="details-section" id="pashupatinath-temple">
         <h2>Pashupatinath Temple</h2>
         <div class="details-container">
-          <div class="details-text-container">
+          <aside class="details-text-container">
             <p>
               Pashupatinath Temple, nestled along the Bagmati River, is a sacred
               sanctuary in Kathmandu. A UNESCO World Heritage site, it blends
               spirituality and ancient rituals, offering a serene space for
               reflection amidst the cultural richness of Nepal.
             </p>
-            <div>
+            <legend>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
               <span>Duration:</span>
               <span>2 hours</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-solid fa-location-dot fa-2xl"></i>
               <span>Location:</span>
               <span>Pashupatinath, Kathmandu, Nepal</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
               <span>Entrance Fee:</span>
               <span>NPR 1000</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-clock fa-2xl"></i>
               <span>Opening Hours:</span>
               <span>4 am - 9 pm</span>
-            </div>
+            </legend>
             <button>Book a Tour</button>
-          </div>
+          </aside>
+          <picture>
             <img
-              src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg"
-              alt="the holy temple of pashupatinath"
-              loading="lazy"
+            src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg"
+            alt="the holy temple of pashupatinath"
+            loading="lazy"
             />
+          </picture>
         </div>
       </section>
       <section class="details-section" id="kopan-monastry">
         <h2>Kopan Monastry</h2>
         <div class="details-container">
+          <picture>
             <img
-              src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg"
-              alt="Kopan Monastery: Tranquil Tibetan retreat"
-              loading="lazy"
+            src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg"
+            alt="Kopan Monastery: Tranquil Tibetan retreat"
+            loading="lazy"
             />
-          <div class="details-text-container">
+          </picture>
+          <aside class="details-text-container">
             <p>
               Kopan Monastery, nestled in serene surroundings, is a tranquil
               Tibetan retreat near Kathmandu. Embrace the peaceful ambiance,
               engage in meditation, and immerse yourself in Tibetan Buddhist
               wisdom at this spiritual haven.
             </p>
-            <div>
+            <legend>
               <i class="fa-solid fa-clock-rotate-left fa-2xl"></i>
               <span>Duration:</span>
               <span>2 - 3 hours</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-solid fa-location-dot fa-2xl"></i>
               <span>Location:</span>
               <span>Budhanilkantha, Kathmandu, Nepal</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-money-bill-1 fa-2xl"></i>
               <span>Entrance Fee:</span>
               <span>Free</span>
-            </div>
-            <div>
+            </legend>
+            <legend>
               <i class="fa-regular fa-clock fa-2xl"></i>
               <span>Opening Hours:</span>
               <span>10 am - 4 pm</span>
-            </div>
+            </legend>
             <button>Book a Tour</button>
-          </div>
+          </aside>
         </div>
       </section>
     </main>
     <footer class="flex-center flex-column">
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-      <div class="flex-center">
+      <nav class="flex-center">
           <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
           <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
           <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
           <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
           <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
-        </div>
+        </nav>
     </footer>
   </body>
 </html>
