finished the semantics

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </section>
       </header>
       <main>
-
         <section class="section-hero flex-center" id="hero">
-          <div class="hero-text-container">
+          <figure class="hero-text-container">
             <h1>Travel like a storm!</h1>
             <p>
               TravelStorm brings travelling quickly among chosen destination into
@@ -40,44 +39,40 @@
             <a href="#populars" class="logo-anchor">
               <button class="btn hover">Choose your Destination!</button>
             </a>
-          </div>
-          <div class="hero-img-container flex-center">
-            <img src="./images/home-images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out" />
-          </div>
+          </figure>
+          <picture class="hero-img-container flex-center">
+            <img src="./images/home-images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
+          </picture>
         </section>
-
         <section class="section-populars flex-center flex-column" id="populars">
-          <div>
-            <h2>Our Most Popular Destinations!</h2>
-          </div>
+          <h2>Our Most Popular Destinations!</h2>
           <div class="populars-container flex-center">
-            <a href="./pages/brussels.html" class="logo-anchor">
-              <article class="flex-center flex-column hover">
-                <img src="./images/home-images/home-popular-1.jpg" alt="An image of Brussels" />
-                <p>Brussels</p>
-              </article>
-            </a>
-            <a href="./pages/kathmandu.html" class="logo-anchor">
-              <article class="flex-center flex-column hover">
-                <img src="./images/home-images/home-popular-2.jpg" alt="An image of Kathmandu" />
+            <figure class="flex-center flex-column hover">
+              <a href="./pages/brussels.html" class="logo-anchor">
+                <img src="./images/home-images/home-popular-1.jpg" alt="An image of Brussels">
+              </a>
+              <p>Brussels</p>
+            </figure>
+              <figure class="flex-center flex-column hover">
+                <a href="./pages/kathmandu.html" class="logo-anchor">
+                  <img src="./images/home-images/home-popular-2.jpg" alt="An image of Kathmandu">
+                </a>
                 <p>Kathmandu</p>
-              </article>
-            </a>
-            <a href="./pages/newcastle.html" class="logo-anchor">
-              <article class="flex-center flex-column hover">
-                <img src="./images/home-images/home-popular-3.jpeg" alt="An image of Newcastle" />
+              </figure>
+              <figure class="flex-center flex-column hover">
+                <a href="./pages/newcastle.html" class="logo-anchor">
+                  <img src="./images/home-images/home-popular-3.jpeg" alt="An image of Newcastle">
+                </a>
                 <p>NewCastle</p>
-              </article>
-            </a>
-            <a href="./pages/telaviv.html" class="logo-anchor">
-              <article class="flex-center flex-column hover">
-                <img src="./images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv" />
+              </figure>
+              <figure class="flex-center flex-column hover">
+                <a href="./pages/telaviv.html" class="logo-anchor">
+                  <img src="./images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv">
+                </a>
                 <p>Tel-Aviv</p>
-              </article>
-            </a>
-          </div>
-        </section>
-
+              </figure>
+            </div>
+          </section>
         <section class="section-testimonies flex-center flex-column">
           <blockquote class="quote">
             <q>
@@ -89,26 +84,22 @@
               TravelStorm
             </q>
           </blockquote>
-          <div class="customer">
-            <p>-Bruce</p>
-          </div>
+          <p class="customer">-Bruce</p>
         </section>
-
         <section class="cta-section flex-center" id="cta">
-          <div class="flex-center flex-column">
-            <h3>Get Your Perfect Vacation Now!</h3>
+          <figure class="flex-center flex-column">
+            <figcaption>Get Your Perfect Vacation Now!</figcaption>
             <p>
               Sign up with us by clicking the button and enjoy your wildest
               vacation yet!
             </p>
-          </div>
-          <div class="flex-center">
+          </figure>
+          <aside class="flex-center">
             <a href="#hero" class="logo-anchor">
               <button class="btn hover">Sign Up!</button>
             </a>
-          </div>
+          </aside>
         </section>
-
       </main>
       <footer class="flex-center flex-column">
         <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
