--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -21,7 +21,7 @@
     <header>
       <nav>
         <div class="logo-container">
-          <a class="logo-anchor" href="index.html"><p>TravelStorm</p></a>
+          <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
         </div>
         <div class="anchor-container flex-center">
           <a href="../index.html" class="hover">Home</a>
@@ -88,10 +88,6 @@
       </section>
     </main>
     <footer class="flex-center flex-column">
-      <img src="../images/Newcastle Images/linkedin.jpeg" class="image">
-      <h3>Thank you for visiting my page and hope you enjoy it, I have been trying to learn front end development
-        for around 5 months now while tackling work and my foundation degree in computer science
-      </h3>
       <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
       <div class="flex-center">
         <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
