navbar changes for home and kathmandu

--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -31,18 +31,16 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a class="logo-container" href="../index.html">
-          TravelStorm
-        </a>
-        <div class="anchor-container flex-center">
+        <picture class="logo-container">
+          <a  href="../index.html">TravelStorm</a>
+        </picture>
+        <nav class="anchor-container flex-center">
           <a href="../index.html">Home</a>
           <a href="../pages/brussels.html">Brussels</a>
           <a href="../pages/kathmandu.html" class="current-page">Kathmandu</a>
           <a href="../pages/newcastle.html">Newcastle</a>
           <a href="../pages/telaviv.html">Tel-Aviv</a>
-        </div>
-      </nav>
+        </nav>
     </header>
     <main>
       <section class="hero-section flex-center" id="top">
