--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
   </head>
   <body>
       <header>
-        <section class="navigation">
           <picture class="logo-container">
-            <a class="logo-anchor" href="index.html"><p>TravelStorm</p></a>
+            <a class="logo-anchor" href="index.html">TravelStorm</p></a>
           </picture>
           <nav class="anchor-container flex-center">
-            <a href="index.html" class="hover">Home</a>
+            <a href="index.html" class="current-page">Home</a>
             <a href="./pages/brussels.html" class="hover">Brussels</a>
             <a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
             <a href="./pages/newcastle.html" class="hover">Newcastle</a>
             <a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
           </nav>
-        </section>
       </header>
       <main>
         <section class="section-hero flex-center" id="hero">
