navigation changes for all pages

--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -9,27 +9,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
       rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../styles/newcastle.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./images/favicon_io/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
     <title>Newcastle</title>
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo-container">
-          <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
-        </div>
-        <div class="anchor-container flex-center">
-          <a href="../index.html" class="hover">Home</a>
-          <a href="../pages/brussels.html" class="hover">Brussels</a>
-          <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
-          <a href="../pages/newcastle.html" class="hover">Newcastle</a>
-          <a href="../pages/telaviv.html" class="hover">Tel-Aviv</a>
-        </div>
+      <picture class="logo-container">
+        <a  href="../index.html">TravelStorm</a>
+      </picture>
+      <nav class="anchor-container flex-center">
+        <a href="../index.html">Home</a>
+        <a href="../pages/brussels.html">Brussels</a>
+        <a href="../pages/kathmandu.html">Kathmandu</a>
+        <a href="../pages/newcastle.html" class="current-page">Newcastle</a>
+        <a href="../pages/telaviv.html">Tel-Aviv</a>
       </nav>
     </header>
     <main>
