--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -23,20 +23,15 @@ awesome/6.2.0/css/all.min.css"
   </head>
   <body>
     <header>
-      <nav>
-        <div class="logo-container">
-          <a href="#">
-            <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
-            <a class="logo-anchor" href="../index.html"><p>TravelStorm</p></a>
-          </a>
-        </div>
-        <div class="anchor-container flex-center">
-          <a href="../index.html">Home</a>
-          <a href="../pages/brussels.html" class="brussels-page">Brussels</a>
-          <a href="../pages/kathmandu.html" class="current-page">Kathmandu</a>
-          <a href="../pages/newcastle.html">Newcastle</a>
-          <a href="../pages/telaviv.html">Tel-Aviv</a>
-        </div>
+      <picture class="logo-container">
+        <a  href="../index.html">TravelStorm</a>
+      </picture>
+      <nav class="anchor-container flex-center">
+        <a href="../index.html">Home</a>
+        <a href="../pages/brussels.html" class="current-page">Brussels</a>
+        <a href="../pages/kathmandu.html">Kathmandu</a>
+        <a href="../pages/newcastle.html">Newcastle</a>
+        <a href="../pages/telaviv.html">Tel-Aviv</a>
       </nav>
     </header>
     <main>
