--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -10,25 +10,20 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
-    <!-- favicon section -->
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
-    <!-- end -->
     <title>Travel-Storm</title>
 </head>
-
 <body>
     <header>
-        <nav>
-            <a class="logo-container" href="../index.html">
-                TravelStorm
-            </a>
-            <div class="anchor-container flex-center">
-                <a href="../index.html">Home</a>
-                <a href="../pages/brussels.html">Brussles</a>
-                <a href="../pages/kathmandu.html">Kathmandu</a>
-                <a href="../pages/newcastle.html">Newcastle</a>
-                <a href="../pages/telaviv.html" class="current-page">Tel-Aviv</a>
-            </div>
+        <picture class="logo-container">
+          <a  href="../index.html">TravelStorm</a>
+        </picture>
+        <nav class="anchor-container flex-center">
+          <a href="../index.html">Home</a>
+          <a href="../pages/brussels.html">Brussels</a>
+          <a href="../pages/kathmandu.html">Kathmandu</a>
+          <a href="../pages/newcastle.html">Newcastle</a>
+          <a href="../pages/telaviv.html" class="current-page">Tel-Aviv</a>
         </nav>
     </header>
     <main>
